Solutions from lecture

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -11,4 +11,5 @@ file(GLOB SOURCES *.cpp)
 foreach(FILE ${SOURCES})
     get_filename_component(BINNAME ${FILE} NAME_WE)
     add_executable(${BINNAME} ${FILE})
+    target_link_libraries(${BINNAME} -fsanitize=address)
 endforeach(FILE)
