--- a/homework/shared_ptr/CMakeLists.txt
+++ b/homework/shared_ptr/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(FLAGS -Wall -Wextra -Werror -Wconversion -pedantic -g)
-set(SANITS -fsanitize=leak -fsanitize=undefined)
+set(SANITS -fsanitize=address -fsanitize=undefined)
 
 #####################################################################
 # Download and unpack googletest at configure time
